src/tests/snapshots/niri__tests__window_opening__check_target_size@fsT-ofT-dwU-b-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AU\nconfig:\nwindow-rule {\n    open-fullscreen true\n    open-floating true\n    default-column-width {  }\n    border { on; }\n}"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1272 × 712, states: [Fullscreen]

post-map configures:
size: 0 × 0, bounds: 1272 × 712, states: []
size: 1272 × 712, bounds: 1272 × 712, states: [Activated]
